--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@ else if( form.checkValidity() == true) {
     <noscript>
       <strong> please enable java script to see the content </strong>
     </noscript>
-    <h1> Quadratic Equation Roots calculator</h1>
+    <header>
+           <h1> Quadratic Equation Roots calculator</h1>
  </header>
  <body>
  <p>
@@ -56,11 +57,17 @@ a: <input type="number" min="-99" max="99" step="1" required id="a" >
 b: <input type="number" min="-99" max="99" step="1" required id="b" >
 c: <input type="number" min="-99" max="99" step="1" required id="c" > <br>
 <br>
- <input type="button" value="calculate roots" 
+ <input type="button" value="calculate roots" class="bla"
  onclick="validation(this.form);">
 
  <p id="message"></p> 
 </form>
  
    </body>
+   <footer> kindly in case of encountering any technical problem or adding any suggestions contact <br>
+      <address>ahmedbesher2012@gmail.com</address> <br>
+      Ahmad <br>
+      <strong>software engineer </strong> <br>
+      &copy; 
+   </footer>
 </html>
